# CompressionService

./: CmakeLists.txt  PreLoad.cmake  README.md
_res/: input.txt
client/: CmakeLists.txt
client/inc/: Client.hpp
client/src/: Client.cpp  main.cpp
protocol/: CMakeLists.txt
protocol/inc/: Default.hpp  utility.hpp
protocol/src/: Default.cpp  utility.cpp
server/: CMakeLists.txt
server/inc/: Compressors.hpp  Protocol.hpp  Server.h  Server.hpp
server/src/: Compressors.cpp  Protocol.cpp  Server.cpp  main.cc  main.cpp
